// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`runtime demo entrypoint query 1`] = `
{
  "trackables": {
    "__typename": "TrackableConnection",
    "edges": [
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Mixing Line",
          },
          "timeZone": "UTC",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Fill Line",
          },
          "timeZone": "UTC",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Assembly Line",
          },
          "timeZone": "UTC",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Cartoning Line",
          },
          "timeZone": "UTC",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Packaging Line",
          },
          "timeZone": "UTC",
          "tracking": {
            "edges": [
              {
                "node": {
                  "displayName": {
                    "name": {
                      "value": "Run",
                    },
                  },
                  "fsm": {
                    "active": {
                      "assignees": {
                        "edges": [
                          {
                            "node": {
                              "assignedTo": null,
                            },
                          },
                        ],
                      },
                      "displayName": {
                        "name": {
                          "value": "Run",
                        },
                      },
                      "fields": {
                        "edges": [
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override Start Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Override End Time",
                                },
                              },
                              "value": {
                                "__typename": "TimestampValue",
                                "timestamp": null,
                              },
                              "valueType": "timestamp",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Run Output",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Reject Count",
                                },
                              },
                              "value": {
                                "__typename": "NumberValue",
                              },
                              "valueType": "number",
                            },
                          },
                          {
                            "node": {
                              "name": {
                                "name": {
                                  "value": "Comments",
                                },
                              },
                              "value": {
                                "__typename": "StringValue",
                                "string": null,
                              },
                              "valueType": "string",
                            },
                          },
                        ],
                      },
                      "state": {
                        "__typename": "Open",
                      },
                    },
                    "transitions": {
                      "edges": [],
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "totalCount": 5,
  },
}
`;

exports[`runtime demo start run 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [
      {
        "__typename": "TaskEdge",
        "node": {
          "__typename": "Task",
          "chain": {
            "__typename": "TaskConnection",
            "totalCount": 1,
          },
          "displayName": {
            "__typename": "DisplayName",
            "name": {
              "__typename": "DynamicString",
              "value": "Run",
            },
          },
          "state": {
            "__typename": "Open",
          },
        },
      },
    ],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`runtime demo stale: start run (should fail) 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": [
      {
        "__typename": "Diagnostic",
        "code": "hash_mismatch_precludes_operation",
      },
    ],
    "instantiations": null,
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`runtime demo production -> idle time 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": null,
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Idle Time",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Description",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [],
        },
      },
    },
  },
}
`;

exports[`runtime demo stale: production -> idle time (should fail) 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": [
      {
        "__typename": "Diagnostic",
        "code": "hash_mismatch_precludes_operation",
      },
    ],
    "instantiations": null,
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Idle Time",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Description",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [],
        },
      },
    },
  },
}
`;

exports[`runtime demo end idle time 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`runtime demo end idle time 2`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": [
      {
        "__typename": "Diagnostic",
        "code": "candidate_choice_unavailable",
      },
    ],
    "instantiations": null,
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`runtime demo production -> downtime 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": null,
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Downtime",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Description",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [],
        },
      },
    },
  },
}
`;

exports[`runtime demo end downtime 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": {
                    "displayName": "Jerry Garcia",
                  },
                },
              },
            ],
          },
          "displayName": {
            "name": {
              "value": "Run",
            },
          },
          "fields": {
            "edges": [
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override Start Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": "2024-09-08T19:31:45.364+00:00",
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Override End Time",
                    },
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Run Output",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Reject Count",
                    },
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "name": {
                    "name": {
                      "value": "Comments",
                    },
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "state": {
            "__typename": "InProgress",
            "inProgressBy": {
              "displayName": "Jerry Garcia",
            },
          },
        },
        "transitions": {
          "edges": [
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Downtime",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
            {
              "node": {
                "displayName": {
                  "name": {
                    "value": "Idle Time",
                  },
                },
                "fields": {
                  "edges": [
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override Start Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Override End Time",
                          },
                        },
                        "value": {
                          "__typename": "TimestampValue",
                        },
                      },
                    },
                    {
                      "node": {
                        "name": {
                          "name": {
                            "value": "Description",
                          },
                        },
                        "value": {
                          "__typename": "StringValue",
                        },
                      },
                    },
                  ],
                },
              },
            },
          ],
        },
      },
    },
  },
}
`;

exports[`runtime demo end run 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "chain": {
        "__typename": "TaskConnection",
        "edges": [
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Run",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Idle Time",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Downtime",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Idle Time",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
        ],
      },
      "fsm": null,
    },
  },
}
`;

exports[`runtime demo apply field edits retroactively 1`] = `
{
  "applyFieldEdits": {
    "__typename": "Task",
    "fields": {
      "__typename": "FieldConnection",
      "edges": [
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Override Start Time",
              },
            },
            "value": {
              "__typename": "TimestampValue",
              "timestamp": null,
            },
            "valueType": "timestamp",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Override End Time",
              },
            },
            "value": {
              "__typename": "TimestampValue",
              "timestamp": null,
            },
            "valueType": "timestamp",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Run Output",
              },
            },
            "value": {
              "__typename": "NumberValue",
            },
            "valueType": "number",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Reject Count",
              },
            },
            "value": {
              "__typename": "NumberValue",
            },
            "valueType": "number",
          },
        },
        {
          "__typename": "FieldEdge",
          "node": {
            "__typename": "Field",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "Comments",
              },
            },
            "value": {
              "__typename": "StringValue",
              "string": "Don't mind me! Just leaving a comment :)",
            },
            "valueType": "string",
          },
        },
      ],
    },
  },
}
`;

exports[`runtime demo garbage 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": [
      {
        "__typename": "Diagnostic",
        "code": "no_associated_fsm",
      },
    ],
    "instantiations": null,
    "root": {
      "__typename": "Task",
      "fsm": null,
    },
  },
}
`;

exports[`runtime demo end run 2`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": [
      {
        "__typename": "Diagnostic",
        "code": "no_associated_fsm",
      },
    ],
    "instantiations": null,
    "root": {
      "__typename": "Task",
      "chain": {
        "__typename": "TaskConnection",
        "edges": [
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Run",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Idle Time",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Downtime",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
          {
            "__typename": "TaskEdge",
            "node": {
              "__typename": "Task",
              "displayName": {
                "__typename": "DisplayName",
                "name": {
                  "__typename": "DynamicString",
                  "value": "Idle Time",
                },
              },
              "state": {
                "__typename": "Closed",
              },
            },
          },
        ],
      },
      "fsm": null,
    },
  },
}
`;
